--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-compliance-checker
+compliance-checker==3.1.1
+pyessv==0.4.5.0
 
 #=========================
 # Testing
 pytest
-
+iris
+cf-python
+psutil
